--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,9 @@
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
-    "dshlib.h": "c"
+    "dshlib.h": "c",
+    "errno.h": "c",
+    "string": "c",
+    "rshlib.h": "c"
   }
 }
